--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: white;
+  padding: 10px;
+}
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
